// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Alert close 1`] = `
<div>
  <div
    className="Component-alert-0-2-72"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-2-71"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-2-70"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-2-80"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-2-79"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-2-78"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-2-88"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-2-87"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-2-86"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-2-96"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-2-95"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-2-94"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-2-104"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-2-103"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-2-102"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-2-112"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-2-111"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-2-110"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-2-120"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-2-119"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-2-118"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-2-128"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-2-127"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-2-126"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Alert theme 1`] = `
<div>
  <div
    className="Component-alert-0-2-8"
  >
    Something happened, please check it out!
  </div>
  <div
    className="Component-alert-0-2-16"
  >
    Something happened, please check it out!
  </div>
  <div
    className="Component-alert-0-2-24"
  >
    Something happened, please check it out!
  </div>
  <div
    className="Component-alert-0-2-32"
  >
    Something happened, please check it out!
  </div>
  <div
    className="Component-alert-0-2-40"
  >
    Something happened, please check it out!
  </div>
  <div
    className="Component-alert-0-2-48"
  >
    Something happened, please check it out!
  </div>
  <div
    className="Component-alert-0-2-56"
  >
    Something happened, please check it out!
  </div>
  <div
    className="Component-alert-0-2-64"
  >
    Something happened, please check it out!
  </div>
</div>
`;

exports[`Storyshots Badge button 1`] = `
<div>
  <button
    className="Component-container-0-2-142"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-2-143"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-2-149"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-2-150"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-2-156"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-2-157"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-2-163"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-2-164"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-2-170"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-2-171"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-2-177"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-2-178"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-2-184"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-2-185"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-2-191"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-2-192"
    >
      4
    </span>
  </button>
</div>
`;

exports[`Storyshots Badge header 1`] = `
<div>
  <div>
    <h1>
      Example heading 
      <span
        className="Component-badge-0-2-129"
      >
        123
      </span>
    </h1>
    <h2>
      Example heading 
      <span
        className="Component-badge-0-2-129"
      >
        123
      </span>
    </h2>
    <h3>
      Example heading 
      <span
        className="Component-badge-0-2-129"
      >
        123
      </span>
    </h3>
    <h4>
      Example heading 
      <span
        className="Component-badge-0-2-129"
      >
        123
      </span>
    </h4>
    <h5>
      Example heading 
      <span
        className="Component-badge-0-2-129"
      >
        123
      </span>
    </h5>
    <h6>
      Example heading 
      <span
        className="Component-badge-0-2-129"
      >
        123
      </span>
    </h6>
  </div>
  <div>
    <h1>
      Example heading 
      <span
        className="Component-badge-0-2-130"
      >
        123
      </span>
    </h1>
    <h2>
      Example heading 
      <span
        className="Component-badge-0-2-130"
      >
        123
      </span>
    </h2>
    <h3>
      Example heading 
      <span
        className="Component-badge-0-2-130"
      >
        123
      </span>
    </h3>
    <h4>
      Example heading 
      <span
        className="Component-badge-0-2-130"
      >
        123
      </span>
    </h4>
    <h5>
      Example heading 
      <span
        className="Component-badge-0-2-130"
      >
        123
      </span>
    </h5>
    <h6>
      Example heading 
      <span
        className="Component-badge-0-2-130"
      >
        123
      </span>
    </h6>
  </div>
  <div>
    <h1>
      Example heading 
      <span
        className="Component-badge-0-2-131"
      >
        123
      </span>
    </h1>
    <h2>
      Example heading 
      <span
        className="Component-badge-0-2-131"
      >
        123
      </span>
    </h2>
    <h3>
      Example heading 
      <span
        className="Component-badge-0-2-131"
      >
        123
      </span>
    </h3>
    <h4>
      Example heading 
      <span
        className="Component-badge-0-2-131"
      >
        123
      </span>
    </h4>
    <h5>
      Example heading 
      <span
        className="Component-badge-0-2-131"
      >
        123
      </span>
    </h5>
    <h6>
      Example heading 
      <span
        className="Component-badge-0-2-131"
      >
        123
      </span>
    </h6>
  </div>
  <div>
    <h1>
      Example heading 
      <span
        className="Component-badge-0-2-132"
      >
        123
      </span>
    </h1>
    <h2>
      Example heading 
      <span
        className="Component-badge-0-2-132"
      >
        123
      </span>
    </h2>
    <h3>
      Example heading 
      <span
        className="Component-badge-0-2-132"
      >
        123
      </span>
    </h3>
    <h4>
      Example heading 
      <span
        className="Component-badge-0-2-132"
      >
        123
      </span>
    </h4>
    <h5>
      Example heading 
      <span
        className="Component-badge-0-2-132"
      >
        123
      </span>
    </h5>
    <h6>
      Example heading 
      <span
        className="Component-badge-0-2-132"
      >
        123
      </span>
    </h6>
  </div>
  <div>
    <h1>
      Example heading 
      <span
        className="Component-badge-0-2-133"
      >
        123
      </span>
    </h1>
    <h2>
      Example heading 
      <span
        className="Component-badge-0-2-133"
      >
        123
      </span>
    </h2>
    <h3>
      Example heading 
      <span
        className="Component-badge-0-2-133"
      >
        123
      </span>
    </h3>
    <h4>
      Example heading 
      <span
        className="Component-badge-0-2-133"
      >
        123
      </span>
    </h4>
    <h5>
      Example heading 
      <span
        className="Component-badge-0-2-133"
      >
        123
      </span>
    </h5>
    <h6>
      Example heading 
      <span
        className="Component-badge-0-2-133"
      >
        123
      </span>
    </h6>
  </div>
  <div>
    <h1>
      Example heading 
      <span
        className="Component-badge-0-2-134"
      >
        123
      </span>
    </h1>
    <h2>
      Example heading 
      <span
        className="Component-badge-0-2-134"
      >
        123
      </span>
    </h2>
    <h3>
      Example heading 
      <span
        className="Component-badge-0-2-134"
      >
        123
      </span>
    </h3>
    <h4>
      Example heading 
      <span
        className="Component-badge-0-2-134"
      >
        123
      </span>
    </h4>
    <h5>
      Example heading 
      <span
        className="Component-badge-0-2-134"
      >
        123
      </span>
    </h5>
    <h6>
      Example heading 
      <span
        className="Component-badge-0-2-134"
      >
        123
      </span>
    </h6>
  </div>
  <div>
    <h1>
      Example heading 
      <span
        className="Component-badge-0-2-135"
      >
        123
      </span>
    </h1>
    <h2>
      Example heading 
      <span
        className="Component-badge-0-2-135"
      >
        123
      </span>
    </h2>
    <h3>
      Example heading 
      <span
        className="Component-badge-0-2-135"
      >
        123
      </span>
    </h3>
    <h4>
      Example heading 
      <span
        className="Component-badge-0-2-135"
      >
        123
      </span>
    </h4>
    <h5>
      Example heading 
      <span
        className="Component-badge-0-2-135"
      >
        123
      </span>
    </h5>
    <h6>
      Example heading 
      <span
        className="Component-badge-0-2-135"
      >
        123
      </span>
    </h6>
  </div>
  <div>
    <h1>
      Example heading 
      <span
        className="Component-badge-0-2-136"
      >
        123
      </span>
    </h1>
    <h2>
      Example heading 
      <span
        className="Component-badge-0-2-136"
      >
        123
      </span>
    </h2>
    <h3>
      Example heading 
      <span
        className="Component-badge-0-2-136"
      >
        123
      </span>
    </h3>
    <h4>
      Example heading 
      <span
        className="Component-badge-0-2-136"
      >
        123
      </span>
    </h4>
    <h5>
      Example heading 
      <span
        className="Component-badge-0-2-136"
      >
        123
      </span>
    </h5>
    <h6>
      Example heading 
      <span
        className="Component-badge-0-2-136"
      >
        123
      </span>
    </h6>
  </div>
</div>
`;

exports[`Storyshots Badge link 1`] = `
<div>
  <a
    className="Component-btnInsideLink-0-2-209"
    href="#"
  >
    badgePrimary
  </a>
  <a
    className="Component-btnInsideLink-0-2-210"
    href="#"
  >
    badgeSecondary
  </a>
  <a
    className="Component-btnInsideLink-0-2-211"
    href="#"
  >
    badgeSuccess
  </a>
  <a
    className="Component-btnInsideLink-0-2-212"
    href="#"
  >
    badgeInfo
  </a>
  <a
    className="Component-btnInsideLink-0-2-213"
    href="#"
  >
    badgeWarning
  </a>
  <a
    className="Component-btnInsideLink-0-2-214"
    href="#"
  >
    badgeDanger
  </a>
  <a
    className="Component-btnInsideLink-0-2-215"
    href="#"
  >
    badgeLight
  </a>
  <a
    className="Component-btnInsideLink-0-2-216"
    href="#"
  >
    badgeDark
  </a>
</div>
`;

exports[`Storyshots Badge pill 1`] = `
<div>
  <span
    className="Component-badgePill-0-2-201"
  >
    badgePrimary
  </span>
  <span
    className="Component-badgePill-0-2-202"
  >
    badgeSecondary
  </span>
  <span
    className="Component-badgePill-0-2-203"
  >
    badgeSuccess
  </span>
  <span
    className="Component-badgePill-0-2-204"
  >
    badgeInfo
  </span>
  <span
    className="Component-badgePill-0-2-205"
  >
    badgeWarning
  </span>
  <span
    className="Component-badgePill-0-2-206"
  >
    badgeDanger
  </span>
  <span
    className="Component-badgePill-0-2-207"
  >
    badgeLight
  </span>
  <span
    className="Component-badgePill-0-2-208"
  >
    badgeDark
  </span>
</div>
`;

exports[`Storyshots Badge span 1`] = `
<div>
  <span
    className="Component-badge-0-2-193"
  >
    badgePrimary
  </span>
  <span
    className="Component-badge-0-2-194"
  >
    badgeSecondary
  </span>
  <span
    className="Component-badge-0-2-195"
  >
    badgeSuccess
  </span>
  <span
    className="Component-badge-0-2-196"
  >
    badgeInfo
  </span>
  <span
    className="Component-badge-0-2-197"
  >
    badgeWarning
  </span>
  <span
    className="Component-badge-0-2-198"
  >
    badgeDanger
  </span>
  <span
    className="Component-badge-0-2-199"
  >
    badgeLight
  </span>
  <span
    className="Component-badge-0-2-200"
  >
    badgeDark
  </span>
</div>
`;

exports[`Storyshots Breadcrumb breadcrumb 1`] = `
<div>
  <nav>
    <ol
      className="Component-breadcrumb-0-2-218"
    >
      <li
        className="Component-breadcrumbItem-0-2-219"
      >
        Home
      </li>
    </ol>
  </nav>
  <nav>
    <ol
      className="Component-breadcrumb-0-2-218"
    >
      <li
        className="Component-breadcrumbItem-0-2-219"
      >
        <a
          href="#"
        >
          Home
        </a>
      </li>
      <li
        className="Component-breadcrumbItem-0-2-219"
      >
        Library
      </li>
    </ol>
  </nav>
  <nav>
    <ol
      className="Component-breadcrumb-0-2-218"
    >
      <li
        className="Component-breadcrumbItem-0-2-219"
      >
        <a
          href="#"
        >
          Home
        </a>
      </li>
      <li
        className="Component-breadcrumbItem-0-2-219"
      >
        <a
          href="#"
        >
          Library
        </a>
      </li>
      <li
        className="Component-breadcrumbItem-0-2-219"
      >
        Data
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Storyshots Button button 1`] = `
<div>
  <button
    className="Component-btn-0-2-225"
  >
    Primary
  </button>
  <button
    className="Component-btn-0-2-231"
  >
    Secondary
  </button>
  <button
    className="Component-btn-0-2-237"
  >
    Success
  </button>
  <button
    className="Component-btn-0-2-243"
  >
    Info
  </button>
  <button
    className="Component-btn-0-2-249"
  >
    Warning
  </button>
  <button
    className="Component-btn-0-2-255"
  >
    Danger
  </button>
  <button
    className="Component-btn-0-2-261"
  >
    Light
  </button>
  <button
    className="Component-btn-0-2-267"
  >
    Dark
  </button>
</div>
`;

exports[`Storyshots Button groups 1`] = `
<div>
  <div
    className="Component-btnContainer-0-2-327 Component-reboot-0-2-321 Component-btnGroup-0-2-317 Component-btnGroupToggle-0-2-318"
  >
    <label
      className="Component-btnActivethemeColor-0-2-328 Component-btn-0-2-316 Component-themeColor-0-2-322 Component-active-0-2-323"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-2-329 Component-btn-0-2-316 Component-themeColor-0-2-322"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-2-329 Component-btn-0-2-316 Component-themeColor-0-2-322"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-2-341 Component-reboot-0-2-335 Component-btnGroup-0-2-331 Component-btnGroupToggle-0-2-332"
  >
    <label
      className="Component-btnActivethemeColor-0-2-342 Component-btn-0-2-330 Component-themeColor-0-2-336 Component-active-0-2-337"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-2-343 Component-btn-0-2-330 Component-themeColor-0-2-336"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-2-343 Component-btn-0-2-330 Component-themeColor-0-2-336"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-2-355 Component-reboot-0-2-349 Component-btnGroup-0-2-345 Component-btnGroupToggle-0-2-346"
  >
    <label
      className="Component-btnActivethemeColor-0-2-356 Component-btn-0-2-344 Component-themeColor-0-2-350 Component-active-0-2-351"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-2-357 Component-btn-0-2-344 Component-themeColor-0-2-350"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-2-357 Component-btn-0-2-344 Component-themeColor-0-2-350"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-2-369 Component-reboot-0-2-363 Component-btnGroup-0-2-359 Component-btnGroupToggle-0-2-360"
  >
    <label
      className="Component-btnActivethemeColor-0-2-370 Component-btn-0-2-358 Component-themeColor-0-2-364 Component-active-0-2-365"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-2-371 Component-btn-0-2-358 Component-themeColor-0-2-364"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-2-371 Component-btn-0-2-358 Component-themeColor-0-2-364"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-2-383 Component-reboot-0-2-377 Component-btnGroup-0-2-373 Component-btnGroupToggle-0-2-374"
  >
    <label
      className="Component-btnActivethemeColor-0-2-384 Component-btn-0-2-372 Component-themeColor-0-2-378 Component-active-0-2-379"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-2-385 Component-btn-0-2-372 Component-themeColor-0-2-378"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-2-385 Component-btn-0-2-372 Component-themeColor-0-2-378"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-2-397 Component-reboot-0-2-391 Component-btnGroup-0-2-387 Component-btnGroupToggle-0-2-388"
  >
    <label
      className="Component-btnActivethemeColor-0-2-398 Component-btn-0-2-386 Component-themeColor-0-2-392 Component-active-0-2-393"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-2-399 Component-btn-0-2-386 Component-themeColor-0-2-392"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-2-399 Component-btn-0-2-386 Component-themeColor-0-2-392"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-2-411 Component-reboot-0-2-405 Component-btnGroup-0-2-401 Component-btnGroupToggle-0-2-402"
  >
    <label
      className="Component-btnActivethemeColor-0-2-412 Component-btn-0-2-400 Component-themeColor-0-2-406 Component-active-0-2-407"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-2-413 Component-btn-0-2-400 Component-themeColor-0-2-406"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-2-413 Component-btn-0-2-400 Component-themeColor-0-2-406"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-2-425 Component-reboot-0-2-419 Component-btnGroup-0-2-415 Component-btnGroupToggle-0-2-416"
  >
    <label
      className="Component-btnActivethemeColor-0-2-426 Component-btn-0-2-414 Component-themeColor-0-2-420 Component-active-0-2-421"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-2-427 Component-btn-0-2-414 Component-themeColor-0-2-420"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-2-427 Component-btn-0-2-414 Component-themeColor-0-2-420"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
</div>
`;

exports[`Storyshots Button outline 1`] = `
<div>
  <button
    className="Component-btn-0-2-273"
  >
    Primary
  </button>
  <button
    className="Component-btn-0-2-279"
  >
    Secondary
  </button>
  <button
    className="Component-btn-0-2-285"
  >
    Success
  </button>
  <button
    className="Component-btn-0-2-291"
  >
    Info
  </button>
  <button
    className="Component-btn-0-2-297"
  >
    Warning
  </button>
  <button
    className="Component-btn-0-2-303"
  >
    Danger
  </button>
  <button
    className="Component-btn-0-2-309"
  >
    Light
  </button>
  <button
    className="Component-btn-0-2-315"
  >
    Dark
  </button>
</div>
`;

exports[`Storyshots Button sizes 1`] = `
<div>
  <button
    className="Component-btnPrimaryLarge-0-2-441 Component-btnMargin-0-2-440 Component-reboot-0-2-432 Component-btn-0-2-428 Component-btnLg-0-2-430 Component-primaryColor-0-2-433"
    type="button"
  >
    Primary Large
  </button>
  <button
    className="Component-btnSecondaryLarge-0-2-442 Component-btnMargin-0-2-440 Component-reboot-0-2-432 Component-btn-0-2-428 Component-btnLg-0-2-430 Component-secondaryColor-0-2-434"
    type="button"
  >
    Secondary Large
  </button>
  <button
    className="Component-btnPrimarySmall-0-2-443 Component-btnMargin-0-2-440 Component-reboot-0-2-432 Component-btn-0-2-428 Component-btnSm-0-2-431 Component-primaryColor-0-2-433"
    type="button"
  >
    Primary Small
  </button>
  <button
    className="Component-btnSecondarySmall-0-2-444 Component-btnMargin-0-2-440 Component-reboot-0-2-432 Component-btn-0-2-428 Component-btnSm-0-2-431 Component-secondaryColor-0-2-434"
    type="button"
  >
    Secondary Small
  </button>
  <button
    className="Component-btnPrimaryBlock-0-2-445 Component-btnMargin-0-2-440 Component-reboot-0-2-432 Component-btn-0-2-428 Component-btnBlock-0-2-429 Component-primaryColor-0-2-433"
    type="button"
  >
    Primary Block
  </button>
  <button
    className="Component-btnSecondaryBlock-0-2-446 Component-btnMargin-0-2-440 Component-reboot-0-2-432 Component-btn-0-2-428 Component-btnBlock-0-2-429 Component-secondaryColor-0-2-434"
    type="button"
  >
    Secondar Block
  </button>
</div>
`;

exports[`Storyshots Button states 1`] = `
<div>
  <button
    className="Component-btnPrimaryLarge-0-2-459 Component-btnMargin-0-2-458 Component-btn-0-2-447 Component-btnLg-0-2-449 Component-primaryColor-0-2-451"
    disabled={true}
    type="button"
  >
    Primary Large
  </button>
  <button
    className="Component-btnSecondaryLarge-0-2-460 Component-btnMargin-0-2-458 Component-btn-0-2-447 Component-btnLg-0-2-449 Component-secondaryColor-0-2-452"
    disabled={true}
    type="button"
  >
    Secondary Large
  </button>
  <a
    className="Component-btnPrimaryLargeDisabled-0-2-461 Component-btnMargin-0-2-458 Component-btn-0-2-447 Component-btnLg-0-2-449 Component-primaryColor-0-2-451 Component-disabled-0-2-454 Component-btnLink-0-2-450"
    href="#"
  >
    Primary link
  </a>
  <a
    className="Component-btnSecondaryLargeDisabled-0-2-462 Component-btnMargin-0-2-458 Component-btn-0-2-447 Component-btnLg-0-2-449 Component-secondaryColor-0-2-452 Component-disabled-0-2-454 Component-btnLink-0-2-450"
    href="#"
  >
    Link
  </a>
</div>
`;

exports[`Storyshots Button toolbar 1`] = `
<div
  className="Component-btnToolbar-0-2-463"
>
  <div
    className="Component-btnGroup-0-2-465"
  >
    <button
      className="Component-btnPrimary-0-2-476 Component-btn-0-2-464 Component-primaryColor-0-2-466"
      type="button"
    >
      1
    </button>
    <button
      className="Component-btnPrimary-0-2-476 Component-btn-0-2-464 Component-primaryColor-0-2-466"
      type="button"
    >
      2
    </button>
    <button
      className="Component-btnPrimary-0-2-476 Component-btn-0-2-464 Component-primaryColor-0-2-466"
      type="button"
    >
      3
    </button>
    <button
      className="Component-btnPrimary-0-2-476 Component-btn-0-2-464 Component-primaryColor-0-2-466"
      type="button"
    >
      4
    </button>
  </div>
  <div
    className="Component-btnGroup-0-2-465"
  >
    <button
      className="Component-btnSecondary-0-2-477 Component-btn-0-2-464 Component-secondaryColor-0-2-467"
      type="button"
    >
      5
    </button>
    <button
      className="Component-btnSecondary-0-2-477 Component-btn-0-2-464 Component-secondaryColor-0-2-467"
      type="button"
    >
      6
    </button>
    <button
      className="Component-btnSecondary-0-2-477 Component-btn-0-2-464 Component-secondaryColor-0-2-467"
      type="button"
    >
      7
    </button>
  </div>
  <div
    className="Component-btnGroup-0-2-465"
  >
    <button
      className="Component-dangerColor-0-2-468"
      type="button"
    >
      8
    </button>
  </div>
</div>
`;

exports[`Storyshots Card card 1`] = `
<div
  className="Component-card-0-2-490"
>
  <img
    className="Component-cardImgTop-0-2-485"
    src="img/286_180.svg"
  />
  <div
    className="Component-cardBody-0-2-486"
  >
    <h5
      className="Component-cardTitle-0-2-487"
    >
      Card title
    </h5>
    <p
      className="Component-cardText-0-2-488"
    >
      Some quick example text to build on the card title and make up the bulk of the card's content.
    </p>
    <a
      className="Component-btnPrimary-0-2-489"
      href="#"
    >
      Go somewhere
    </a>
  </div>
</div>
`;

exports[`Storyshots Card card group 1`] = `
<div
  className="Component-cardGroup-0-2-517"
>
  <div
    className="Component-card-0-2-516"
  >
    <img
      alt="Card image cap"
      className="Component-cardImgTop-0-2-518"
      src="img/286_180.svg"
    />
    <div
      className="Component-cardBody-0-2-519"
    >
      <h5
        className="Component-cardTitle-0-2-520"
      >
        Card title
      </h5>
      <p
        className="Component-cardText-0-2-521"
      >
        This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
      </p>
      <p
        className="Component-cardText-0-2-521"
      >
        <small
          className="Component-textMuted-0-2-522"
        >
          Last updated 3 mins ago
        </small>
      </p>
    </div>
  </div>
  <div
    className="Component-card-0-2-516"
  >
    <img
      alt="Card image cap"
      className="Component-cardImgTop-0-2-518"
      src="img/286_180.svg"
    />
    <div
      className="Component-cardBody-0-2-519"
    >
      <h5
        className="Component-cardTitle-0-2-520"
      >
        Card title
      </h5>
      <p
        className="Component-cardText-0-2-521"
      >
        This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
      </p>
      <p
        className="Component-cardText-0-2-521"
      >
        <small
          className="Component-textMuted-0-2-522"
        >
          Last updated 3 mins ago
        </small>
      </p>
    </div>
  </div>
  <div
    className="Component-card-0-2-516"
  >
    <img
      alt="Card image cap"
      className="Component-cardImgTop-0-2-518"
      src="img/286_180.svg"
    />
    <div
      className="Component-cardBody-0-2-519"
    >
      <h5
        className="Component-cardTitle-0-2-520"
      >
        Card title
      </h5>
      <p
        className="Component-cardText-0-2-521"
      >
        This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
      </p>
      <p
        className="Component-cardText-0-2-521"
      >
        <small
          className="Component-textMuted-0-2-522"
        >
          Last updated 3 mins ago
        </small>
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card content type 1`] = `
<div
  className="Component-card-0-2-503"
>
  <div
    className="Component-cardBody-0-2-499"
  >
    <h5
      className="Component-cardTitle-0-2-500"
    >
      Card title
    </h5>
    <h6
      className="Component-cardSubtitle-0-2-504"
    >
      Card subtitle
    </h6>
    <p
      className="Component-cardText-0-2-501"
    >
      Some quick example text to build on the card title and make up the bulk of the card's content.
    </p>
    <a
      className="Component-cardLink-0-2-502"
      href="#"
    >
      Card link
    </a>
    <a
      className="Component-cardLink-0-2-502"
      href="#"
    >
      Another link
    </a>
  </div>
</div>
`;

exports[`Storyshots Card list group 1`] = `
<div
  className="Component-card-0-2-510"
>
  <div
    className="Component-cardHeader-0-2-512"
  >
    Featured
  </div>
  <ul
    className="Component-listGroup-0-2-511"
  >
    <li
      className="Component-listGroupItem-0-2-513"
    >
      Cras justo odio
    </li>
    <li
      className="Component-listGroupItem-0-2-513"
    >
      Dapibus ac facilisis in
    </li>
    <li
      className="Component-listGroupItem-0-2-513"
    >
      Vestibulum at eros
    </li>
  </ul>
</div>
`;
